Add  CSS Specifications
Added font weight, size, type, color, etc.
as well as background color

--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
 
         <div class="org-images">
             <div class="org-pic">
-                <img>
+                <div class="img-box"></div>
                 <div class="img-text">this is some subtext under an illustration or image</div>
             </div>
             <div class="org-pic">
-                <img>
+                <div class="img-box"></div>
                 <div class="img-text">this is some subtext under an illustration or image</div>
             </div>
             <div class="org-pic">
-                <img>
+                <div class="img-box"></div>
                 <div class="img-text">this is some subtext under an illustration or image</div>
             </div>
             <div class="org-pic">
-                <img>
+                <div class="img-box"></div>
                 <div class="img-text">this is some subtext under an illustration or image</div>
             </div>
         </div>
@@ -53,12 +53,12 @@
 
     <div class="quote">
         <div class="quotetext">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-        <div class="quoteauthor">-Thor, God of Thunder</div>
+        <div class="quoteauthor"><b>-Thor, God of Thunder</b></div>
     </div>
 
     <div class="cta">
         <div class="cta-box">
-            <div class="subject">Call to action! It's time!</div>
+            <div class="subject"><b>Call to action! It's time!</b></div>
             <div class="subtext">Sign up for our product by clicking that button right over there!</div>
             <button>Sign up</button>
         </div>
