Add flexbox components to page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button>Sign up</button>
         </div>
 
-        <img>
+        <div class="hero-img"></div>
     </div>
 
     <div class="org-chart">
@@ -52,14 +52,18 @@
     </div>
 
     <div class="quote">
-        <div class="quotetext">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-        <div class="quoteauthor"><b>-Thor, God of Thunder</b></div>
+        <div class="subquote">
+            <div class="quotetext">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="quoteauthor"><b>-Thor, God of Thunder</b></div>
+        </div>
     </div>
 
     <div class="cta">
         <div class="cta-box">
-            <div class="subject"><b>Call to action! It's time!</b></div>
-            <div class="subtext">Sign up for our product by clicking that button right over there!</div>
+            <div class="cta-text">
+                <div class="subject"><b>Call to action! It's time!</b></div>
+                <div class="subtext">Sign up for our product by clicking that button right over there!</div>
+            </div>
             <button>Sign up</button>
         </div>
     </div>
